<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Prime_Number_Checker" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CjA-lW-TF1">
                                <rect key="frame" x="164" y="277" width="46" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="resultButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="46" id="fol-Qj-bbz"/>
                                </constraints>
                                <state key="normal" title="Result"/>
                                <connections>
                                    <action selector="resultButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="9nJ-4F-Swq"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WRO-B9-a0u">
                                <rect key="frame" x="0.0" y="148" width="375" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="resultLabel"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="y4n-f6-EpC"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Prime Number Checker" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dfH-vf-myb">
                                <rect key="frame" x="86" y="40" width="202" height="21"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Z1E-jI-pzI">
                                <rect key="frame" x="146" y="213" width="82" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="numberTextField"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="82" id="KGE-6H-x9N"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                            </textField>
                        </subviews>
                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="WRO-B9-a0u" firstAttribute="centerX" secondItem="Z1E-jI-pzI" secondAttribute="centerX" id="5Dd-Q1-gZd"/>
                            <constraint firstItem="dfH-vf-myb" firstAttribute="centerX" secondItem="WRO-B9-a0u" secondAttribute="centerX" id="9vB-sJ-ZdX"/>
                            <constraint firstItem="WRO-B9-a0u" firstAttribute="top" secondItem="dfH-vf-myb" secondAttribute="bottom" constant="87" id="FEh-Xv-0YE"/>
                            <constraint firstItem="Z1E-jI-pzI" firstAttribute="top" secondItem="WRO-B9-a0u" secondAttribute="bottom" constant="44" id="I5G-dm-SJJ"/>
                            <constraint firstItem="dfH-vf-myb" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="al5-gD-qUj"/>
                            <constraint firstItem="dfH-vf-myb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="70" id="ben-CB-ila"/>
                            <constraint firstItem="Z1E-jI-pzI" firstAttribute="centerX" secondItem="CjA-lW-TF1" secondAttribute="centerX" id="mUW-p9-BA1"/>
                            <constraint firstAttribute="trailing" secondItem="WRO-B9-a0u" secondAttribute="trailing" id="nHu-4q-1Kp"/>
                            <constraint firstItem="WRO-B9-a0u" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="tH8-9q-jOj"/>
                            <constraint firstItem="CjA-lW-TF1" firstAttribute="top" secondItem="Z1E-jI-pzI" secondAttribute="bottom" constant="34" id="xwm-6u-2Kw"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="resultLabel" destination="WRO-B9-a0u" id="d7J-6z-Iwg"/>
                        <outlet property="resultTextField" destination="Z1E-jI-pzI" id="w5h-es-PIq"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="32.799999999999997" y="38.23088455772114"/>
        </scene>
    </scenes>
</document>
